--- a/exercises/04_http/ex7/package.json
+++ b/exercises/04_http/ex7/package.json
@@ -3,18 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "type": "module",
   "scripts": {
-  "test": "mocha --timeout 10000"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "test": "mocha --timeout 10000"
+  },
   "devDependencies": {
-    "chai": "^4.5.0",
-    "chai-http": "^5.0.0",
-    "mocha": "^10.7.3"
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3"
   }
 }
