--- a/exercises/08_authentication/ex5/.eslintrc.json
+++ b/exercises/08_authentication/ex5/.eslintrc.json
@@ -16,7 +16,7 @@
     "rules": {
         "semi": ["error", "always"],
         "quotes": "off",
-        "no-dupe-else-if": ["error"],
+        "no-dupe-else-if": "error",
         "eqeqeq": ["error", "always"],
         "no-implicit-globals": "error",
         "no-redeclare": "error",
@@ -39,5 +39,4 @@
         "prefer-object-spread": "warn",
         "prefer-template": "warn"
     }
-  }
-  
+}
