--- a/exercises/09_data_persistence/package.json
+++ b/exercises/09_data_persistence/package.json
@@ -16,7 +16,6 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.7.2",
     "uuid": "^10.0.0"
   },
@@ -24,6 +23,8 @@
     "chai": "^4.5.0",
     "chai-http": "^4.4.0",
     "mocha": "^10.7.3",
+    "mongodb": "^6.10.0",
+    "mongodb-memory-server": "^10.1.2",
     "nodemon": "^3.1.7"
   }
 }
